cluster/omada/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omada-deployment
  namespace: omada
spec:
  replicas: 1
  serviceName: omada
  selector:
    matchLabels:
      app: omada
  template:
    metadata:
      labels:
        app: omada
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                # when possible, run on the network controller
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - network
      hostNetwork: true
      # https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - env:
            - name: PUID
              value: "508"
            - name: PGID
              value: "508"
            - name: TZ
              value: "America/Chicago"
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/mbentley/omada-controller:6.3.0.45
          name: omada
          ports:
            - containerPort: 8088
              protocol: TCP
              name: manage-http
            - containerPort: 8043
              protocol: TCP
              name: manage-https
            - containerPort: 8843
              protocol: TCP
              name: portal-https
            - containerPort: 29812
              protocol: TCP
              name: adopt-v1
            - containerPort: 27001
              protocol: UDP
              name: app-discovery
            - containerPort: 29810
              protocol: UDP
              name: discovery
            - containerPort: 29811
              protocol: TCP
              name: manager-v1
            - containerPort: 29814
              protocol: TCP
              name: manager-v2
            - containerPort: 29815
              protocol: TCP
              name: transfer-v2
            - containerPort: 29816
              protocol: TCP
              name: rtty
            - containerPort: 29813
              protocol: TCP
              name: upgrade-v1
          volumeMounts:
            - mountPath: /opt/tplink/EAPController/data
              name: omada-vol-data
            - mountPath: /opt/tplink/EAPController/logs
              name: omada-vol-logs
      volumes:
        - name: omada-vol-data
          persistentVolumeClaim:
            claimName: omada-pvc-data
        - name: omada-vol-logs
          persistentVolumeClaim:
            claimName: omada-pvc-logs
