cluster/omada/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-service
  namespace: omada
spec:
  type: LoadBalancer
  loadBalancerIP: "10.0.1.6"
  selector:
    app: omada
  ports:
    # https://github.com/mbentley/docker-omada-controller?tab=readme-ov-file#optional-variables
    # port names cannot include underscores and muist be 15 characters max
    - port: 8088
      protocol: TCP
      name: manage-http
    - port: 8043
      protocol: TCP
      name: manage-https
    - port: 8843
      protocol: TCP
      name: portal-https
    - port: 29812
      protocol: TCP
      name: adopt-v1
    - port: 27001
      protocol: UDP
      name: app-discovery
    - port: 29810
      protocol: UDP
      name: discovery
    - port: 29811
      protocol: TCP
      name: manager-v1
    - port: 29814
      protocol: TCP
      name: manager-v2
    - port: 29815
      protocol: TCP
      name: transfer-v2
    - port: 29816
      protocol: TCP
      name: rtty
    - port: 29813
      protocol: TCP
      name: upgrade-v1
    - port: 29817
      protocol: TCP
      name: device-monitor
